# icub-gazebo-driving

./: CMakeLists.txt  README.md
gazebo/: CMakeLists.txt
gazebo/worlds/: icub-gazebo-grasping-sandbox.sdf
scripts/: CMakeLists.txt  icub-gazebo-driving.xml
src/: CMakeLists.txt  Makefile  cardinal_points_grasp.h  main.cpp  read_joint_port.cpp  rpc.thrift
